--- a/estate_workshop/views/estate_notification.xml
+++ b/estate_workshop/views/estate_notification.xml
@@ -78,10 +78,11 @@
                                 <field name="planned_manpower" string="Planned Manpower"/>
                             </group>
                             <group string="Master Details">
-                                <field name="type_task" string="Type Task"/>
-                                <field name="type_preventive" attrs="{'invisible': [('type_task','!=','1')]}" string="Sub task"/>
-                                <field name="type_corective" attrs="{'invisible': [('type_task','!=','2')]}" string="Sub task"/>
-                                <field name="typetask_id" options="{'no_create_edit': True}" string="Type Master Task"/>
+                                <field name="type_task1" options="{'no_create_edit': True}" string="Type Task"/>
+                                <field name="type_subtask" options="{'no_create_edit': True}"
+                                       attrs="{'invisible': [('type_task1','=',False)]}" string="Sub Task"/>
+                                <field name="type_list_task" options="{'no_create_edit': True}"
+                                       attrs="{'invisible': [('type_subtask','=',False)]}" string="List Task"/>
                             </group>
                         </group>
                         <notebook>
@@ -158,13 +159,13 @@
             <field name="arch" type="xml">
                 <search string="Master Task" >
                     <field name="name" />
-                    <field name="type_task"/>
-                    <field name="type_preventive"/>
-                    <field name="type_corective"/>
+                    <field name="type_task1"/>
+                    <field name="type_subtask"/>
+                    <field name="type_list_task"/>
                     <group expand="0" string="Group By">
-                        <filter name="groupby_typetask" context="{'group_by' : 'type_task'}" string="Type Task"/>
-                        <filter name="groupby_subtask" context="{'group_by' : 'type_preventive'}" string="Sub Task Preventive"/>
-                        <filter name="groupby_subtask" context="{'group_by' : 'type_corective'}" string="Sub Task Corective"/>
+                        <filter name="groupby_typetask" context="{'group_by' : 'type_task1'}" string="Type Task"/>
+                        <filter name="groupby_subtask" context="{'group_by' : 'type_subtask'}" string="Sub Task Preventive"/>
+                        <filter name="groupby_listtask" context="{'group_by' : 'type_list_task'}" string="list Task"/>
                     </group>
                 </search>
             </field>
