[ADD] estate_workshop : add field requester in service external

--- a/estate_workshop/views/estate_notification.xml
+++ b/estate_workshop/views/estate_notification.xml
@@ -112,7 +112,7 @@
                 <tree string="Master Task">
                     <field name="name" />
                     <field name="asset_id" string="Asset"/>
-                    <field name="type_task" string="Type Task"/>
+                    <field name="type_task1" string="Type Task"/>
                     <field name="planned_hour" string="Planned Hour's"/>
                     <field name="planned_manpower" string="Planned Manpower"/>
                 </tree>
