--- a/estate_vehicle/views/estate_vehicle_otherservice_log.xml
+++ b/estate_vehicle/views/estate_vehicle_otherservice_log.xml
@@ -106,6 +106,6 @@
             </field>
         </record>
 
-        <menuitem action="estate_vehicle.fleet_vehicle_log_otherservice_act" parent="fleet.fleet_vehicles" id="fleet_vehicle_log_otherservice_menu" groups="fleet.group_fleet_user"/>
+        <!--<menuitem action="estate_vehicle.fleet_vehicle_log_otherservice_act" parent="fleet.fleet_vehicles" id="fleet_vehicle_log_otherservice_menu" groups="fleet.group_fleet_user"/>-->
     </data>
 </openerp>
