--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -260,17 +260,18 @@
                                 <field name="batch_id" attrs="{'required': [('state','=','draft')],
                                 'readonly': [('state','=','done')]}" domain="[('batch_id','=',batch_id)]"
                                   invisible="1"/>
-                                <field name="selectionstage_id" attrs="{'readonly': [('state','=','done')]}"
+                                <field name="selectionstage_id" attrs="{'readonly': [('state','!=','draft')]}"
                                        options="{'no_create_edit': True}"/>
                                 <field name="date_plant" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
                                 <field name="selection_date"
                                        attrs="{'invisible': [('selectionstage_id','=',False)],
-                                 'readonly': [('state','=','done')]}"/>
+                                 'readonly': [('state','!=','draft')]}"/>
+                                 <field name="age_seed" readonly="1"/>
 
                             </group>
 
                             <group coolspan="10">
-                                <field name="stage_id" invisible="0"/>
+                                <field name="stage_id" invisible="1"/>
                                 <field name="qty_batch" attrs="{'required': [('state','=','draft')]}" readonly="1"/>
                                 <field name="qty_plante" string="Quantity Planted Batch"
                                        attrs="{'invisible': [('state','!=','done')]}" readonly="1">
