--- a/estate_nursery/views/estate_nursery_view.xml
+++ b/estate_nursery/views/estate_nursery_view.xml
@@ -236,8 +236,7 @@
                                 <group name="top" string="Information">
                                     <group name="top_left">
                                         <field name="age_seed_range" string="Seed Age" readonly="1"/>
-                                        <field name="month"/>
-                                        <field name="date_selection"/>
+                                        <field name="age_seed_planted" string="Seed Age Planted" readonly="1" invisible="0"/>
                                         <field name="qty_received" attrs="{'readonly': [('state','!=','draft')]}"/>
                                         <field name="qty_normal" attrs="{'readonly': [('state','!=','draft')]}" />
                                         <field name="qty_double" invisible="1"/>
@@ -278,7 +277,7 @@
                                 'readonly' : ['|',('status','=',True),
                                 ('age_seed_range','!=',3),('status_age','!=',True)]}"
                                        context="{'tree_view_ref' : 'estate_nursery.view_tree_cleaving_polytone',
-                                       'default_qty_plante': qty_planted,'default_date_selection' : date_selection }"/>
+                                       'default_qty_plante': qty_planted}"/>
                             </page>
 
                             <page string="Recovery Seed" attrs="{'invisible' : [('qty_recovery', '=',0)]}">
